k8s-manifests/assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: assistant
  name: assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assistant
  template:
    metadata:
      labels:
        app: assistant
    spec:
      containers:
      - image: pbhaggblom/assistant-test:latest
        name: assistant-test
        ports:
        - containerPort: 8080
