k8s-manifests/chroma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chroma
  name: chroma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chroma
  template:
    metadata:
      labels:
        app: chroma
    spec:
      containers:
      - image: chromadb/chroma:latest
        name: chroma
        ports:
        - containerPort: 8000
