k8s-manifests/documentation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: documentation
  name: documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentation
  template:
    metadata:
      labels:
        app: documentation
    spec:
      containers:
      - image: pbhaggblom/documentation:v1.0
        name: documentation
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: k8s-docs
          mountPath: /data/rag
      volumes:
      - name: k8s-docs
        hostPath: 
          path: "/change/this"
          type: Directory
