k8s-manifests/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: mariadb:lts
        name: mariadb
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
