k8s-manifests/chroma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chroma
  name: chroma-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: chroma
  type: ClusterIP
