k8s-manifests/documentation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: documentation
  name: documentation-service
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: h2c
    port: 9001
    targetPort: 8081
  selector:
    app: documentation
  type: ClusterIP
