k8s-manifests/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
