k8s-manifests/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama-service
  name: ollama-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama-service
  type: ClusterIP
